<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2018 Peter Gregus for GravityBox Project (C3C076@xda)
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <MultiSelectListPreference 
        android:key="pref_lc_qh_range_days"
        android:title="@string/pref_lc_qh_range_days_title" />

    <com.ceco.nougat.gravitybox.preference.TimePreference
        android:key="pref_lc_qh_range_start"
        android:title="@string/pref_lc_qh_start_title"
        android:defaultValue="1380"
        android:persistent="false" />

    <com.ceco.nougat.gravitybox.preference.TimePreference
        android:key="pref_lc_qh_range_end"
        android:title="@string/pref_lc_qh_end_title"
        android:defaultValue="360"
        android:persistent="false" />

    <CheckBoxPreference
        android:key="pref_lc_qh_range_mute_led"
        android:title="@string/pref_lc_qh_mute_led_title"
        android:defaultValue="false"
        android:persistent="false" />

    <CheckBoxPreference
        android:key="pref_lc_qh_range_mute_vibe"
        android:title="@string/pref_lc_qh_mute_vibe_title"
        android:summary="@string/pref_lc_qh_mute_vibe_summary"
        android:defaultValue="true"
        android:persistent="false" />

    <CheckBoxPreference
        android:key="pref_lc_qh_range_mute_system_vibe"
        android:title="@string/pref_lc_qh_mute_system_vibe_title"
        android:summary="@string/pref_lc_qh_mute_system_vibe_summary"
        android:defaultValue="false"
        android:persistent="false" />

    <MultiSelectListPreference 
        android:key="pref_lc_qh_range_mute_system_sounds"
        android:title="@string/pref_lc_qh_mute_system_sounds_title"
        android:entries="@array/system_sound_entries"
        android:entryValues="@array/system_sound_values"
        android:defaultValue="@array/empty_array" />

    <Preference 
        android:key="pref_lc_qh_range_ringer_whitelist"
        android:title="@string/pref_lc_qh_ringer_whitelist_title"
        android:summary="@string/pref_lc_qh_ringer_whitelist_summary"
        android:persistent="false" />

</PreferenceScreen>