<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2018 Peter Gregus for GravityBox Project (C3C076@xda)
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/search"
          android:title="@string/search"
          android:icon="@android:drawable/ic_menu_search"
          app:showAsAction="collapseActionView|ifRoom"
          app:actionViewClass="androidx.appcompat.widget.SearchView"
          android:visible="false" />

    <item android:id="@+id/searchKeyword"
          android:title=""
          app:showAsAction="always"
          app:actionViewClass="android.widget.TextView"
          android:visible="false" />

    <item android:id="@+id/searchReset"
          android:title="@string/search_reset"
          android:icon="@android:drawable/ic_menu_close_clear_cancel"
          app:showAsAction="ifRoom"
          android:visible="false" />

    <item android:id="@+id/showAll"
          android:title="@string/qhrw_menu_show_all" />

    <item android:id="@+id/showStarred"
          android:title="@string/qhrw_menu_show_starred" />

    <item android:id="@+id/showWhitelisted"
          android:title="@string/qhrw_menu_show_whitelisted" />

</menu>
